增加了身份验证

--- a/SpringSecurity-2/src/main/resources/application.properties
+++ b/SpringSecurity-2/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/security?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.open-in-view=false
-server.servlet.session.timeout=60
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+server.servlet.session.timeout=360
 server.port=8888
 spring.main.allow-bean-definition-overriding=true
+spring.jackson.serialization.fail-on-empty-beans=false
+
