--- a/SpringSecurity-2/pom.xml
+++ b/SpringSecurity-2/pom.xml
@@ -73,6 +73,18 @@
             <artifactId>java-property-utils</artifactId>
             <version>1.9</version>
         </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
